Fixed Dark Mode becoming White

--- a/style.css
+++ b/style.css
@@ -204,15 +204,25 @@ body {
 	margin: 0; /* Remove margin to avoid unwanted spacing */
 }
 
-html:has(body[data-bg='color'] .menuBar #enableDarkModeCheckbox:checked)  {
+html:has(body[data-bg='color'] .menuBar #enableDarkModeCheckbox:checked):not(:has(#darkTheme:checked))  {
 	filter: invert(1) hue-rotate(180deg);
 	-webkit-filter: invert(1) hue-rotate(180deg);
+	& #darkTheme {
+		filter: invert(1);
+		-webkit-filter: invert(1);
+	}
 }
 
-body[data-bg='wallpaper']:has(.menuBar #enableDarkModeCheckbox:checked) > *:not(.menuBar,#bookmarksContainer), body[data-bg='wallpaper']:has(.menuBar #enableDarkModeCheckbox:checked) :is(.menuCont,.bookmark-sidebar) {
+body[data-bg='wallpaper']:has(.menuBar #enableDarkModeCheckbox:checked):not(:has(#darkTheme:checked)) > *:not(.menuBar,#bookmarksContainer), body[data-bg='wallpaper']:has(.menuBar #enableDarkModeCheckbox:checked):not(:has(#darkTheme:checked)) :is(.menuCont,.bookmark-sidebar) {
 	filter: invert(1) hue-rotate(180deg);
 	-webkit-filter: invert(1) hue-rotate(180deg);
+	& #darkTheme {
+		filter: invert(1);
+		-webkit-filter: invert(1);
+	}
 }
+
+#darkTheme
 
 /* Search suggestions box */
 .resultBox {
